--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "msw/core",
+  "name": "msw.core",
   "version": "1.0.0",
+  "registry": "github",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/milenstanev/msw.core.git"
+  },
   "author": "",
   "license": "ISC",
-  "jspm": {
-    "devDependencies": {
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4"
-    }
-  }
+  "bugs": {
+    "url": "https://github.com/milenstanev/msw.core/issues"
+  },
+  "homepage": "https://github.com/milenstanev/msw.core#readme"
 }
