just test changes

--- a/package.json
+++ b/package.json
@@ -1,20 +1,12 @@
 {
   "name": "milenstanev/msw.core",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "registry": "github",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/milenstanev/msw.core.git"
-  },
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/milenstanev/msw.core/issues"
-  },
-  "homepage": "https://github.com/milenstanev/msw.core#readme"
+  "license": "ISC"
 }
