--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "milenstanev-msw.core",
   "repository": {
     "type": "git",
-    "url": "git@github.com:jspm/github.git"
+    "url": "git@github.com:milenstanev/msw.core.git"
   },
   "version": "0.0.2",
   "registry": "github",
